--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,21 @@
 
 @font-face {
     font-family: 'Formula Condensed';
-    src:    url("/fonts/FormulaCondensed-Regular.woff") format("woff"),
-            url("/fonts/FormulaCondensed-Regular.woff2") format("woff2"),
-            url("/fonts/FormulaCondensed-Regular.ttf") format("truetype"),
-            url("/fonts/FormulaCondensed-Regular.eot") format("embedded-opentype"),
+    src:    url("fonts/FormulaCondensed-Regular.woff") format("woff"),
+            url("fonts/FormulaCondensed-Regular.woff2") format("woff2"),
+            url("fonts/FormulaCondensed-Regular.ttf") format("truetype"),
+            url("fonts/FormulaCondensed-Regular.otf") format("opentype"),
+            url("fonts/FormulaCondensed-Regular.eot") format("embedded-opentype"),
 }
 
 @font-face {
     font-family: 'Formula Condensed';
     font-weight: bold;
-    src:    url("/fonts/FormulaCondensed-Bold.woff") format("woff"),
-            url("/fonts/FormulaCondensed-Bold.woff2") format("woff2"),
-            url("/fonts/FormulaCondensed-Bold.ttf") format("truetype"),
-            url("/fonts/FormulaCondensed-Bold.eot") format("embedded-opentype"),
+    src:    url("fonts/FormulaCondensed-Bold.woff") format("woff"),
+            url("fonts/FormulaCondensed-Bold.woff2") format("woff2"),
+            url("fonts/FormulaCondensed-Bold.ttf") format("truetype"),
+            url("fonts/FormulaCondensed-Bold.otf") format("opentype"),
+            url("fonts/FormulaCondensed-Bold.eot") format("embedded-opentype"),
 }
 
 body {
