--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 { /*reset for mobile browsers */
+h1, h2, h3, h4, h5, h6 { /* reset */
     font-weight: normal;
 }
 
@@ -27,9 +27,30 @@ h1, h2, h3, h4, h5, h6 { /*reset for mobile browsers */
             url("fonts/FormulaCondensed-Bold.eot") format("embedded-opentype");
 }
 
+@font-face {
+    font-family: 'Telegraf';
+    font-weight: bold;
+    src:    url("fonts/Telegraf-Bold.otf") format("opentype"),
+            url("fonts/Telegraf-Bold.woff") format("woff"),
+            url("fonts/Telegraf-Bold.woff2") format("woff2"),
+            url("fonts/Telegraf-Bold.ttf") format("truetype"),
+            url("fonts/Telegraf-Bold.eot") format("embedded-opentype");
+}
+
+@font-face {
+    font-family: 'Telegraf';
+    font-weight: normal;
+    src:    url("fonts/Telegraf-Regular.otf") format("opentype"),
+            url("fonts/Telegraf-Regular.woff") format("woff"),
+            url("fonts/Telegraf-Regular.woff2") format("woff2"),
+            url("fonts/Telegraf-Regular.ttf") format("truetype"),
+            url("fonts/Telegraf-Regular.eot") format("embedded-opentype");
+}
+
 body {
     display: grid;
     grid-template-rows: 100vh 100vh 100vh 100vh 100vh;
+    grid-template-columns: 1fr 2fr 1fr;
     font-family: 'Formula Condensed';
     font-size: 8vw;
     letter-spacing: 2.1px;
@@ -37,6 +58,7 @@ body {
 
 .landing {
     grid-row: 1 / 2;
+    grid-column: span 3;
     display: flex;   
     justify-content: center;
     align-items: center;
@@ -44,14 +66,16 @@ body {
 
 .v2 {
     grid-row: 2 / 3;
+    grid-column: span 3;
     display: flex;   
-    justify-content: center;
+    justify-content: space-around;
     align-items: center; 
-    background-color: aqua;   
+    background-color: dodgerblue;   
 }
 
 .v3 {
     grid-row: 3 / 4;
+    grid-column: span 3;
     display: flex;   
     justify-content: center;
     align-items: center; 
@@ -60,6 +84,7 @@ body {
 
 .v4 {
     grid-row: 4 / 5;
+    grid-column: span 3;
     display: flex;   
     justify-content: center;
     align-items: center; 
@@ -68,6 +93,7 @@ body {
 
 .v5 {
     grid-row: 5 / 6;
+    grid-column: span 3;
     display: flex;   
     justify-content: center;
     align-items: center; 
@@ -76,6 +102,7 @@ body {
 
 #title-banner {
     display: flex;
+    font-family: 'Formula Condensed';
 }
 
 .title-banner-letters {
@@ -83,10 +110,6 @@ body {
     cursor: default;
     margin: 0;
     font-feature-settings: normal;
-    /* -webkit-transition: all 2.5s ease;
-    -moz-transition: all 2.5s ease;
-    -o-transition: all 2.5s ease;
-    transition: all .5s ease; */
 }
 
 .title-banner-letters-end {
@@ -96,8 +119,53 @@ body {
 
 .title-banner-hover {
     font-feature-settings: "salt";
-    /* -webkit-transition: all 2.5s ease;
-    -moz-transition: all 2.5s ease;
-    -o-transition: all 2.5s ease;
-    transition: all .5s ease; */
+}
+
+.brackets {
+    font-size: min(40vw, 90vh);
+    font-family: 'Telegraf';
+    font-weight: normal;
+    width: 25vw;
+    /* text-align:  center; */
+}
+
+#bracket-left {
+    animation-duration: 2s;
+    animation-name: slidein-left;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    text-align: right;
+}
+#bracket-right {
+    animation-duration: 2s;
+    animation-name: slidein-right;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    text-align: left;
+}
+
+@keyframes slidein-left {
+    from {
+        width:  20vw;
+    }
+    to {
+    }
+}
+
+@keyframes slidein-right {
+    from {
+        width:  20vw;
+    }
+    to {
+    }
+}
+
+#heading1 {
+    font-size: 10.8vw;
+    font-weight: bold;
+    text-align: center;
+}
+
+.heading1-wide {
+    font-feature-settings: "salt";
 }
