--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ h1, h2, h3, h4, h5, h6 { /* reset */
 
 body {
     display: grid;
-    grid-template-rows: 100vh auto auto auto 100vh;
+    grid-template-rows: 100vh auto auto auto auto 50vh;
     grid-template-columns: 10px 1fr 2fr 1fr 10px;
     font-family: 'Formula Condensed';
     font-size: 8vw;
@@ -81,7 +81,7 @@ body {
     grid-row: 2 / 3;
     grid-column: 2 / 5;
     padding-top: 5vh;
-    padding-bottom: 5vh;;
+    padding-bottom: 5vh;
     display: flex;   
     justify-content: space-around;
     align-items: center; 
@@ -105,15 +105,18 @@ body {
     padding: 20px;
     align-items: flex-start; 
     background-color: #fee6e6;   
+    font-size: min(6vw, 20pt);
+    line-height: 1.15em;
 }
 
 #v5 {
-    grid-row: 5 / 6;
-    grid-column: span 3;
+    grid-row: 6 / 7;
+    grid-column: span 6;
     display: flex;   
     justify-content: center;
-    align-items: center; 
-    background-color: aqua;   
+    padding: 20px;
+    align-items: flex-start; 
+    background-color: white;   
 }
 
 #title-banner {
@@ -169,7 +172,7 @@ body {
 
 @keyframes slidein-left {
     from {
-        width:  20vw;
+        width:  15vw;
     }
     to {
     }
@@ -177,7 +180,7 @@ body {
 
 @keyframes slidein-right {
     from {
-        width:  20vw;
+        width:  15vw;
     }
     to {
     }
@@ -194,13 +197,11 @@ body {
 }
 
 .section-heading {
-    font-size: 6vw;
     font-family: 'Telegraf';
     font-weight: bolder;
 }
 
 .section-copy {
-    font-size: 6vw;
     font-family: 'Telegraf';
     font-weight: normal;
 }
