--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,11 @@ body {
     align-items: center;
 }
 
+#v-copy {
+    grid-row: 2 / 6;
+    grid-column: 2 / 5;
+}
+
 #v2 {
     grid-row: 2 / 3;
     grid-column: 2 / 5;
