--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@ h1, h2, h3, h4, h5, h6 { /* reset */
     font-weight: normal;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+    text-transform: none;
+}
+
 @font-face {
     font-family: 'Formula Condensed';
     font-style: normal;
@@ -60,7 +66,7 @@ h1, h2, h3, h4, h5, h6 { /* reset */
 
 body {
     display: grid;
-    grid-template-rows: 100vh auto auto auto auto 50vh;
+    grid-template-rows: 100vh auto auto auto auto 30vh;
     grid-template-columns: 10px 1fr 2fr 1fr 10px;
     font-family: 'Formula Condensed';
     font-size: 8vw;
@@ -116,11 +122,10 @@ body {
 
 #v5 {
     grid-row: 6 / 7;
-    grid-column: span 6;
-    display: flex;   
-    justify-content: center;
-    padding: 20px;
-    align-items: flex-start; 
+    grid-column: 1 / 6;
+    display: grid;
+    grid-template-columns: 10px 3fr 1fr 10px;
+    padding-bottom: 20px;
     background-color: white;   
 }
 
@@ -211,10 +216,79 @@ body {
     font-weight: normal;
 }
 
+.contact {
+    grid-column: 2 / 4;
+    display: flex;   
+    justify-content: flex-end;
+    align-items: flex-end; 
+    font-size: min(2vw, 10pt);
+}
+
+#links {
+    grid-column: 2 / 3;
+    font-size: min(3vw, 23pt);
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.link-holder {
+    width: min(28vw, 270px);
+    display: flex;
+    justify-content: center;
+}
+
+.link-text {
+    text-align: center;
+    display: flex;
+    align-content: center;
+}
+
 .bg-transition {
     background-color: white;   
 }
 
 .is-not-inview {
     background-color: black;   
+}
+
+
+.brackets-bottom {
+    font-size: min(7vw, 50pt);
+    font-family: 'Telegraf';
+    font-weight: normal;
+    width: 3vw;
+    /* text-align:  center; */
+}
+
+#bracket-bottom-left {
+    animation-duration: 2s;
+    animation-name: slidein-bottom-left;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    text-align: left;
+}
+
+#bracket-bottom-right {
+    animation-duration: 2s;
+    animation-name: slidein-bottom-right;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    text-align: right;
+}
+
+@keyframes slidein-bottom-left {
+    from {
+        width:  3.5vw;
+    }
+    to {
+    }
+}
+
+@keyframes slidein-bottom-right {
+    from {
+        width:  3.5vw;
+    }
+    to {
+    }
 }
